# golf-analysis

./: .gitignore  Agents.md  HISTORY.md  README.md  TODO.md  analyze_swing.py  index.html  main.py  packages.txt  pyproject.toml  requirements.txt  roadmap.md  session_context.md
.agents/: config.json
.agents/rules/: environment.md  ledger.md  permissions.md  session_management.md
.streamlit/: config.toml
docs/: architecture.md  backlog.md  experiments.md  history.md  product.md  session_context.md
models/: kinematic_config.json  kinematic_schema.json
notebooks/: data_exploration.ipynb  data_pipeline_exploration.ipynb  data_preprocessing.ipynb  isolation_forest_gatekeeper.ipynb  lstm_keras.ipynb  lstm_model.ipynb  xgb_binary_detector.ipynb  xgb_gatekeeper_evaluation.ipynb  xgb_model.ipynb
scratch/: create_notebook.py  generate_skeleton_demos.py  inspect_frames.py  run_data_pipeline.py  test_pipeline.py
scripts/: curate_benchmark_dataset.py  deploy_to_hf_space.py  prepare_sample_presets.py  preprocess_pro_videos.py  reencode_sample_presets.py  upload_assets_to_hf.py
src/: alignment.py  coaching_engine.py  data_processor.py  detector.py  feature_engineer.py  kinematic_features.py  pro_preprocessing.py  train_classifier.py  visual_stitcher.py  visualizer.py
src/utils/: hf_downloader.py
streamlit_app/: app.py  charts.py
tests/: test_kinematic_features.py  test_pro_preprocessing.py
