[project]
name = "golf-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastai>=2.8.7",
    "jupyter>=1.1.1",
    "kaggle>=2.2.3",
    "mediapipe>=0.10.35",
    "opencv-python>=5.0.0.93",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "torch>=2.13.0",
    "xgboost>=3.3.0",
]
