[project]
name = "golf-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "huggingface-hub>=1.24.0",
    "jupyter>=1.1.1",
    "kaggle>=2.2.3",
    "mediapipe>=0.10.35",
    "opencv-python>=5.0.0.93",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "streamlit>=1.59.2",
    "tensorflow>=2.21.0",
    "xgboost>=3.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
